2010/06/30 (TS):
 - lanIpBasic.c: Let udpSockDestroy() return ENXIO instead of EBADFD
   (not POSIX and gone in newlib-1.18/rtems-4.10) if the socket had no
   queue attached.
2010/06/16 (TS):
 - drvLan9118.c: BUGFIX -- ISR was installed and interrupts enabled BEFORE
   the daemon task executed. Thus it could happen that interrupts were lost
   (because the RTEMS event was posted to an invalid TID or to one that
   had not been started yet) leaving the daemon blocked and interrupts disabled.
2010/06/11 (TS):
 - drvGnrIpBasic.c: BUGFIX -- rtems_task_start() clears all RTEMS events.
   Therefore, IRQs happening between hw_start (which enables IRQs) and
   task_start are lost. To make sure no IRQs are lost we enable irqs
   from the driver task before entering its work loop.
2010/04/14 (TS):
 - Makefile.am, tsec_lldrv.c: Added support for mvme3100's tsec NIC
   (***UNTESTED*** [I don't have a transition module for testing with
   a secondary ethernet port]).

   NOTE: This requires rtems-4.10 with some new API features!

2010/03/17 (TS):
 - lanIpBasic.c: Fixed IGMP problems:
     o igmp_send_msg(): even if buffer allocation fails a valid
       MC address may still be found. Moved lookup outside of
       'if ( buf_p )' statement.
     o BUGFIX: igmp_timeo() dereferenced 'mca' pointer even if
       no address was found (which could happen if no buffer
       was available, see above).
   With these two fixes: if igmp_timeo() finds that 'mca' lookup
   failed it means that the group was unsubscribed between the
   callout task marking the callout as not pending and the 
   igmp_timeo() being executed. In this case, no callout_deactivate()
   operation is necessary because the mca and associated callout
   struct are defunct and will be destroyed.
     o should assert !lanIpCallout_pending instead of !lanIpCallout_active
       after a trystop operation (because if trystop fails the callout
       is still active but not pending).
2010/02/09 (TS):